--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "license": "ISC",
   "dependencies": {
     "ejs": "^1.0.0",
-    "express": "^4.13.3"
+    "express": "^4.13.3",
+    "request": "^2.65.0"
   },
   "devDependencies": {
     "gulp": "^3.9.0",
