--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "ejs": "^1.0.0",
     "express": "^4.13.3",
+    "express-session": "^1.12.1",
     "request": "^2.65.0"
   },
   "devDependencies": {
